resources/app/bookstore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"bookstoredb"}]'
  labels:
    app: bookstore
    app.kubernetes.io/component: bookstore
    app.kubernetes.io/instance: bookstore
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: bookstore
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-8-ubi8
  name: bookstore
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: bookstore
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bookstore
        deploymentconfig: bookstore
    spec:
      containers:
      - name: bookstore
        image: quay.io/pittar/fuse-bookstore:latest
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 20
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        resources:
          limits:
            memory: 512Mi
            cpu: '1'
          requests:
            memory: 512Mi
            cpu: 250m
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
