resources/app/bookstore-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"bookstoredb"}]'
  labels:
    app: bookstore
    app.kubernetes.io/component: bookstore
    app.kubernetes.io/instance: bookstore
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: bookstore-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-8-ubi8
  name: bookstore
spec:
  selector:
    app: bookstore
    deploymentconfig: bookstore
  ports:
  - appProtocol: http
    name: 8080-tcp
    port: 8080
  - appProtocol: https
    name: 8443-tcp
    port: 8443
  - name: 8778-tcp
    port: 8778
