resources/app/bookstoredb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    template.openshift.io/expose-uri: postgres://{.spec.clusterIP}:{.spec.ports[?(.name=="postgresql")].port}
  name: bookstoredb
spec:
  selector:
    name: bookstoredb
  ports:
  - appProtocol: tcp
    name: postgresql
    port: 5432
