resources/app/bookstore-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bookstore
    app.kubernetes.io/component: bookstore
    app.kubernetes.io/instance: bookstore
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: bookstore-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-8-ubi8
  name: bookstore
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: bookstore
    weight: 100
  wildcardPolicy: None
